# Mandelbrot-Generator

./: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: calculator.h  common.h  convertor.h  generator.h  mandelbrot.h  util.h
src/: calculator.c  convertor.c  generator.c  main.c  mandelbrot.c  util.c
