bin_PROGRAMS = mandelbrot
mandelbrot_SOURCES = $(top_srcdir)/src/main.c \
    $(top_srcdir)/src/mandelbrot.c \
    $(top_srcdir)/src/util.c
EXTRA_DIST = $(top_srcdir)/include/stb_image_write.h \
    $(top_srcdir)/include/mandelbrot.h \
    $(top_srcdir)/include/util.h
AM_CPPFLAGS = -I$(top_srcdir)/include