AC_PREREQ([2.69])
AC_INIT([Mandelbrot], [1.0], [hasnain.mohsan@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_DEFINE([DEFAULT_IMAGE_SIZE], [512], [The default image size])
AC_DEFINE([DEFAULT_X_POSITION], [-0.75], [The default x position])
AC_DEFINE([DEFAULT_Y_POSITION], [0.0], [The default y position])
AC_DEFINE([DEFAULT_ZOOM], [3.0], [The default zoom])
AC_DEFINE([DEFAULT_MAX_ITERATIONS], [512], [The default max iterations])
AC_DEFINE([DEFAULT_IMAGE_OUTPUT], ["mandelbrot.jpg"], [The default output image])

AC_OUTPUT